# mcp-inspector

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/diag/: invocation.rs  linter.rs  llm_adapter.rs  mod.rs  optimizer.rs  recording.rs  spec_validator.rs  types.rs
src-tauri/src/mcp/: client.rs  logging.rs  mod.rs  transport.rs  types.rs
src-tauri/src/proxy/: http_proxy.rs  mod.rs  stdio_proxy.rs
src/components/: AddServerModal.tsx  DiagnosticPanel.tsx  JsonViewer.tsx  LlmConfigPanel.tsx  MainPanel.tsx  MessageLog.tsx  PromptsPanel.tsx  ProxyPanel.tsx  RecordingPanel.tsx  ResizableColumns.tsx  ResourcesPanel.tsx  ServerContextMenu.tsx  SettingsPanel.tsx  Sidebar.tsx  ToolForm.tsx  ToolsPanel.tsx
src/components/ui/: FormControls.tsx
src/constants/: llmPresets.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/store/: llmStore.ts  serverStore.ts  uiStore.ts
src/theme/: PlatformThemeProvider.tsx  form.css  platform.ts
src/types/: index.ts
src/utils/: proxyConfig.ts
